# fridadrp

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
fridadrp/instrument/tests/: test_configs.py
src/fridadrp/: __init__.py  drp.yaml  loader.py  products.py
src/fridadrp/core/: __init__.py
src/fridadrp/core/tests/: test_slicenum.py
src/fridadrp/ifu_simulator/: compute_image2d_rss_from_detector_method1.py  compute_image2d_rss_method1.py  compute_image3d_ifu_from_rss_method1.py  differential_atmospheric_refraction.py  display_skycalc.py  fapply_atmosphere_transmission.py  frida_ifu_simulator.py  generate_geometry_for_scene_block.py  generate_image2d_method0_ifu.py  generate_image3d_method0_ifu.py  generate_spectrum_for_scene_block.py  ifu_simulator.py  load_atmosphere_transmission_curve.py  raise_valueerror.py  save_image2d_detector_method0.py  save_image2d_rss.py  set_wavelength_unit_and_range.py  simulate_constant_photlam.py  simulate_delta_lines.py  simulate_image2d_from_fitsfile.py  simulate_spectrum.py  update_image2d_rss_detector_method0.py  update_image2d_rss_method1.py
src/fridadrp/instrument/: define_auxiliary_files.py
src/fridadrp/instrument/configs/: component-bd6950a0-1c30-11ef-8b73-5689b1900102.json  instrument-c7f94f7d-1f57-4644-86d6-7004a2506680.json
src/fridadrp/instrument/tests/: test_configs.py
src/fridadrp/processing/: define_3d_wcs.py  linear_wavelength_calibration.py  linear_wavelength_calibration_frida.py  set_wv_parameters.py
src/fridadrp/recipes/auxiliary/: __init__.py
src/fridadrp/tests/: test_drp.py
src/fridadrp/tools/: columns_to_analyze_from_colranges.py  find_slice_boundaries_from_flat.py  find_slice_boundary_borders_from_flat.py  fit_slice_boundary_borders_with_polynomials.py  frida_ifu_simulator.py  ifu_simulator.py  overplot_slice_boundary_polynomials.py  read_slice_boundary_borders.py  read_slice_boundary_polynomials.py
src/fridadrp/tools/tests/: test_frida_ifu_simulator.py
