[build-system]
requires = ["setuptools >= 64", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fridadrp"
dynamic = ["version"]
description = "FRIDA Data Reduction Pipeline"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Nicolás Cardiel", email = "cardiel@ucm.es"},
    {name = "Sergio Pascual", email = "sergiopr@fis.ucm.es"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "joblib",
    "matplotlib",
    "numina >= 0.32",
    "numpy >= 1.20",
    "pooch",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest>=6",
    "pytest-remotedata",
]
docs = [
    "sphinx",
    "numpydoc",
    "sphinx_rtd_theme"
]

[project.urls]
Homepage = "https://github.com/guaix-ucm/fridadrp"
Repository = "https://github.com/guaix-ucm/fridadrp.git"

[project.entry-points."numina.pipeline.1"]
FRIDA = "fridadrp.loader:drp_load"

[project.scripts]
fridadrp-ifu_simulator = "fridadrp.ifu_simulator.frida_ifu_simulator:main"

# pyproject.toml
[tool.setuptools_scm]
write_to = "src/fridadrp/_version.py"
