[metadata]
name = fridadrp
version = 0.1.dev0
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/fridadrp
license = GPLv3
description = FRIDA Data Reduction Pipeline
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    setuptools>=39.2
    six
    numpy
    matplotlib
    astropy >= 2
    scipy
    numina >= 0.22
    enum34; python_version<"3.4"
    contextlib2; python_version<"3.5"

[options.package_data]
fridadrp = drp.yaml
fridrp.instrument.configs =
    instrument-*.json

[options.extras_require]
test =
    pytest<3.7; python_version<"3"
    pytest>=6; python_version>="3"
    pytest-remotedata
docs =
    sphinx

[options.entry_points]
numina.pipeline.1 =
    FRIDA = fridadrp.loader:drp_load

[tool:pytest]
testpaths = "fridadrp"
remote_data_strict = true

[build_ext]
inplace = 0

[bdist_wheel]
universal = 1
