[metadata]
name = fridadrp
version = 0.1.dev0
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/fridadrp
license = GPLv3
license_files =
    LICENSE
description = FRIDA Data Reduction Pipeline
long_description = file:README.rst
long_description_content_type = text/rst
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    = src
install_requires =
    setuptools>=39.2
    six
    numpy
    matplotlib
    astropy >= 2
    scipy
    numina >= 0.22

[options.packages.find]
where = src

[options.package_data]
fridadrp = drp.yaml
fridrp.instrument.configs =
    instrument-*.json

[options.extras_require]
test =
    pytest
    pytest-remotedata
docs =
    sphinx

[options.entry_points]
numina.pipeline.1 =
    FRIDA = fridadrp.loader:drp_load

[bdist_wheel]
universal = 1
